# endpoint-py

./: .coveragerc  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TODO  pyproject.toml  x.py
.github/workflows/: publish-wiki.yml  test-package.yml
docs/source/: chronix.rst  chronix.tests.rst  conf.py  endpoint.rst  index.rst  md_conf.py  modules.rst
src/endpoint/: __init__.py  _cli.py  endpoints.py  functional.py  interface.py  native_parser.py  parser_collection.py  str_guess.py  structure.py
src/endpoint/tests/: _hard_functions.py  test_cli.py  test_endpoint.py  test_endpoints.py  test_functional.py  test_integration.py  test_interface.py  test_native_parser.py  test_parser_collection.py  test_str_guess.py  test_structure.py
