[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "endpoint",
  "endpoint.tests",
]
include-package-data = true
package-dir = {"" = "src"}

[tool.ruff]
line-length = 88  # For PEP8 compliance
exclude = [
    "src/endpoint/tests/*",
    "scripts/*",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F401", "F403"]  # E501 Line length checks for now; F401 & F403 because they are used for type checking
exclude = [
    "src/endpoint/tests/*",
    "scripts/*",
]

[project]
name = "endpoint.cli"
version = "2.1.1.0"
dependencies = ["typing_extensions"]
requires-python = ">= 3.10"
authors = [
  {name = "Cariel Becker", email = "cariel.becker@gmx.de"},
]
maintainers = [
  {name = "Cariel Becker", email = "cariel.becker@gmx.de"},
]
description = "A refined, full scale solution to CLIs ."
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-only"
keywords = ["general", "tools", "app tools", "production", "cli", "parser", "full-scale"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Programming Language :: Python",
	"Natural Language :: English"
]

[project.optional-dependencies]
dev = ["pytest", "coverage", "pre-commit", "ruff", "pdoc>=14.0", "argumint"]

[project.urls]
Home = "https://pypi.org/project/endpoint-py/"
Repository = "https://github.com/adalfarus/endpoint-py"
Documentation = "https://github.com/adalfarus/endpoint-py/wiki"
"Issue tracker" = "https://github.com/adalfarus/endpoint-py/issues"

#[tool.pytest.ini_options]
## This is equivalent to setup_requires and tests_require
## Add your pytest configuration here
#addopts = "your pytest options"

[project.scripts]
endpoint-cli = "endpoint._cli:_cli"
